css changes + overflow-x fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -104,6 +104,7 @@ section {
     width: 70%;
     min-width: 250px;
     font-size: 1em;
+    overflow-x: hidden;
 }
 
 .projectsTitle {
@@ -144,6 +145,7 @@ section {
 
 hr {
     width: 30%;
+    min-width: 200px;
     margin: 50px auto !important;
     border-top: 1px solid #82752A !important;
     opacity: 0.8 !important;
